# disoft

./: README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
disoft/: asgi.py  settings.py  urls.py  wsgi.py
misc/: Disoft_Test_Task.postman_collection.json
tasks/: models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_status_states.py  0003_alter_task_status.py  0004_taskimage.py  0005_taskcomment.py
